--- a/index.html
+++ b/index.html
@@ -294,12 +294,39 @@
           </li>
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">7</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Bowery Electric</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://www.bandsintown.com/e/102913416?came_from=162&app_id=bandsintown_email_just_announced" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
               <h2 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">9</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
             <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Delancey</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
             <a href="https://www.bandsintown.com/e/102738359-castor-and-pollux-at-the-delancey?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">10</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ LiFe Rooftop</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://www.bandsintown.com/e/102913428-castor-and-pollux-at-life-rooftop-central-park?came_from=162&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">14</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Bowery Electric</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://www.bandsintown.com/e/102913422?came_from=162&app_id=bandsintown_email_just_announced" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
