--- a/index.html
+++ b/index.html
@@ -71,17 +71,27 @@
         <h2 class="dn" aria-hidden="false">releases</h2>
         <ul class="flex flex-column items-center releases-list">
           <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/5YxnKed6ozPccge0iJK8Su?si=aV51GDq4TNGNmoyB-gjrwA&dl_branch=1" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/14O2v7scY128YRpPAGq92z?si=4ae9ba82024542e3" target="_blank" rel="noopener noreferrer">
+              <img src="./media/album_art/back_to_you.jpeg" alt="Back to You by Castor & Pollux">
+            </a>
+          </li>
+          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/track/1fCwzBexrUI8DpPgmJLgh1?si=95874c4b85f1457a" target="_blank" rel="noopener noreferrer">
+              <img src="./media/album_art/fear.jpeg" alt="Fear by Castor & Pollux">
+            </a>
+          </li>
+          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/track/3XSQyDI5wi8WSmnP2Dt5tI?si=499968d783624794" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/cp-eclipse.jpeg" alt="Eclipse by Castor & Pollux">
             </a>
           </li>
           <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/6VDBwwjc7gmOmrNal9b2Z6?si=ELu-GN1xR8in4JPbPfeLjA&dl_branch=1" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/7tm0bwryZDWK8HzJvEZOhv?si=28496d3058ae4c24" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Electro_Beam.jpg" alt="Electro Beam by Castor & Pollux">
             </a>
           </li>
           <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/3epoCM8b4uIBjRTgWhDNhC?si=HCwjfWdXQQykK6eZba9org&dl_branch=1" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/110XFaiQOrbzdE5iIhANTU?si=8d3e9a9f3aa94f13" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Tonight.jpeg" alt="Tonight (Castor & Pollux Remix)">
             </a>
           </li>
@@ -91,7 +101,7 @@
             </a>
           </li>
           <li id="release-ultron" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/7ACVVHxbPegYMZ84NCdzCI?si=hhNmkSB2QTquOKOoeT6mOg" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/4KH5qutHvn4IS9NYNdt8tc?si=5ea21491005a4e59" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Ultron.jpeg" alt="Ultron by Castor & Pollux">
             </a>
           </li>
@@ -101,67 +111,67 @@
             </a>
           </li>
           <li id="release-mystery" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/0JG1QiBcurHqATtlr8NHxs?si=PqjJA1UtSlCLx4YlpH9-PA" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/2LJGLX11GznJEgikOpTIs0?si=e8680f7c41164284" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Mystery.jpg" alt="Myster by Castor & Pollux">
             </a>
           </li>
           <li id="release-we_are_gods" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/3kFtRs3fzQxobz0dsv9Ie8?si=WHW5XabbRYq5I15D0JhZxw" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/5unAT3DTVzN24a2tGu87am?si=58b9a916651345ff" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/We_Are_Gods_Artwork.jpg" alt="We Are Gods by Castor & Pollux">
             </a>
           </li>
           <li id="release-warzone" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/67jZQiyiYNML594l39bdxP?si=X5osaHJSQvSZJkKkMgFCRA" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/3BIHSXjkfhNpTPcQVWlE0R?si=f8a59fa2345a4533" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/warzone.png" alt="Warzone by Castor & Pollux">
             </a>
           </li>
           <li id="release-your_destiny" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/0zhizxDZ1uyRXynPyZYrWR?si=rjgSu8ICQ9CsUlc99i1anA" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/0ZXmhvGI5AI2h83JM3RmiV?si=ef27880863b74c29" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/your_destiny.jpg" alt="Your Destiny by Castor & Pollux">
             </a>
           </li>
           <li id="release-feel_it_too" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/4yyLYONgySxG8o7VNjv8S2?si=J4T9Whk1TeKwlj3l8PTXSg" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/5GNK9oDV7fZeHbWokvAfOH?si=2b1c4940d6204a68" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/FeelitToo.jpg" alt="Feel It Too by Castor & Pollux">
             </a>
           </li>
           <li id="release-enter_the_world" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/70dLWw2aeY5HNJRGZfrxm4?si=8yqo8kYZRzeUtP4N8qsOFg" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/7B0ND16APx16UwGqBUaHET?si=41a19d073f6346de" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/EnterTheWorld.jpg" alt="Enter the World by Castor & Pollux">
             </a>
           </li>
           <li id="release-infected" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/1x8eYPRsnKUlZSjlgq4BbM?si=5KmcMlIKTi6VHeafRL3BrQ" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/59pfyc5IcyCAZtP98O8Gzo?si=bcfbca8c8c134f23" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Infected.jpg" alt="Infected by Castor & Pollux">
             </a>
           </li>
           <li id="release-recon" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/7wxGJ17mj9yNYqyiGXIrPt?si=GRfQzNhhT9KHroz-9dr2Mg" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/6vwjwyOynmJWw76mxYWLUh?si=dc4ba96446694fa7" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Recon.png" alt="Recon by Castor & Pollux">
             </a>
           </li>
           <li id="release-evade" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/7eAvPccyi8zCdMc4TdGPLZ?si=OAfWyvhBTn2qJT_3lRAGbA" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/5vWjBftLQ7fCuJpZpKJLwI?si=c7b695a3606f409d" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Evade.png" alt="Evade by Castor & Pollux">
             </a>
           </li>
           <li id="release-fiesta" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/4tQiTP3toiYjhRtCp0dMOX?si=g_Z2DkgZRLiIu-PI-cVQvw" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/2z3FlfHMBa53arLGp8Abyg?si=55824a1dc28a4315" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Fiesta.png" alt="Fiesta by Castor & Pollux">
             </a>
           </li>
           <li id="release-fake_love" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/4YuLLEVasPcpZHCz0Ktzzd?si=wez5NtM-TTeNY4qiRlr-pw" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/1kljBvAA6437tKoOg0Vrnm?si=79dc24c8bb6949df" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/fakelove.jpg" alt="Fake Love by Castor & Pollux">
             </a>          
           </li>
           <li id="release-predator" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/5VZUNdTcsIlUfwnoeQv6Ii?si=9vpqYZmWTheqg0pWvbhC7g" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/6mALdYQy1c5QNtFWLo7uXx?si=058d0671a3f84b25" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Predator.png" alt="Predator by Castor & Pollux">
             </a>
           </li>
           <li id="release-drop_bombs" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
-            <a href="https://open.spotify.com/album/5deFmS4Lc3usCQewL8erSN?si=HM6GTsqKSMmA-xJVpY5ltw" target="_blank" rel="noopener noreferrer">
+            <a href="https://open.spotify.com/track/4g0KLJgbkrDeDAlCOfxvzM?si=ff30c86b6aaa419b" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Drop_Bombs.jpg" alt="Drop Bombs by Castor & Pollux">
             </a>
           </li>
@@ -345,6 +355,15 @@
             <p class="pv3 f3-l w-50-l">Castor & Pollux @ Mercury Lounge</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
             <a href="https://www.ticketmaster.com/event/00005B14C3CC71B8" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Nov<span class="db-l tr-l ml3 ml0-l">12</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ Noir NY</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="/" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">coming soon</a>
           </li>
         </ul>
       </section>
