--- a/index.html
+++ b/index.html
@@ -71,106 +71,111 @@
         <h2 class="dn" aria-hidden="false">releases</h2>
         <ul class="flex flex-column items-center releases-list">
           <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <a href="https://soundcloud.com/castorandpollux_music/justin-bieber-ft-daniel-caesar-giveon-peaches-castor-pollux-x-dj-guy-festival-mix-1?ref=clipboard&p=a&c=1&si=7f7c75c9eaca42249fbd34eb3fed05a3&utm_campaign=social_sharing&utm_medium=text&utm_source=clipboard" target="_blank" rel="noopener noreferrer">
+              <img src="./media/album_art/biebs_peaches.jpeg" alt="Back to You by Castor & Pollux">
+            </a>
+          </li>
+          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/14O2v7scY128YRpPAGq92z?si=4ae9ba82024542e3" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/back_to_you.jpeg" alt="Back to You by Castor & Pollux">
             </a>
           </li>
-          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/1fCwzBexrUI8DpPgmJLgh1?si=95874c4b85f1457a" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/fear.jpeg" alt="Fear by Castor & Pollux">
             </a>
           </li>
-          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/3XSQyDI5wi8WSmnP2Dt5tI?si=499968d783624794" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/cp-eclipse.jpeg" alt="Eclipse by Castor & Pollux">
             </a>
           </li>
-          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/7tm0bwryZDWK8HzJvEZOhv?si=28496d3058ae4c24" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Electro_Beam.jpg" alt="Electro Beam by Castor & Pollux">
             </a>
           </li>
-          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-tonight" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/110XFaiQOrbzdE5iIhANTU?si=8d3e9a9f3aa94f13" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Tonight.jpeg" alt="Tonight (Castor & Pollux Remix)">
             </a>
           </li>
-          <li id="release-trance-and-energy" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-trance-and-energy" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/6YZE4tpJu9SuovrjkQvQWL?si=b67c26a3274b47de" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/trance_and_energy.jpeg" alt="Trance and Energy by Castor & Pollux">
             </a>
           </li>
-          <li id="release-ultron" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-ultron" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/4KH5qutHvn4IS9NYNdt8tc?si=5ea21491005a4e59" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Ultron.jpeg" alt="Ultron by Castor & Pollux">
             </a>
           </li>
-          <li id="release-gods_grace" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-gods_grace" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/5t6azd0aqzafqHUFPh0sXN?si=lkuAf8dUSTqpXNlRHEVARQ" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/GodsGrace.jpg" alt="God's Grace by Castor & Pollux">
             </a>
           </li>
-          <li id="release-mystery" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-mystery" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/2LJGLX11GznJEgikOpTIs0?si=e8680f7c41164284" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Mystery.jpg" alt="Myster by Castor & Pollux">
             </a>
           </li>
-          <li id="release-we_are_gods" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-we_are_gods" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/5unAT3DTVzN24a2tGu87am?si=58b9a916651345ff" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/We_Are_Gods_Artwork.jpg" alt="We Are Gods by Castor & Pollux">
             </a>
           </li>
-          <li id="release-warzone" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-warzone" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/3BIHSXjkfhNpTPcQVWlE0R?si=f8a59fa2345a4533" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/warzone.png" alt="Warzone by Castor & Pollux">
             </a>
           </li>
-          <li id="release-your_destiny" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-your_destiny" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/0ZXmhvGI5AI2h83JM3RmiV?si=ef27880863b74c29" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/your_destiny.jpg" alt="Your Destiny by Castor & Pollux">
             </a>
           </li>
-          <li id="release-feel_it_too" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-feel_it_too" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/5GNK9oDV7fZeHbWokvAfOH?si=2b1c4940d6204a68" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/FeelitToo.jpg" alt="Feel It Too by Castor & Pollux">
             </a>
           </li>
-          <li id="release-enter_the_world" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-enter_the_world" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/7B0ND16APx16UwGqBUaHET?si=41a19d073f6346de" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/EnterTheWorld.jpg" alt="Enter the World by Castor & Pollux">
             </a>
           </li>
-          <li id="release-infected" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-infected" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/59pfyc5IcyCAZtP98O8Gzo?si=bcfbca8c8c134f23" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Infected.jpg" alt="Infected by Castor & Pollux">
             </a>
           </li>
-          <li id="release-recon" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-recon" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/6vwjwyOynmJWw76mxYWLUh?si=dc4ba96446694fa7" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Recon.png" alt="Recon by Castor & Pollux">
             </a>
           </li>
-          <li id="release-evade" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-evade" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/5vWjBftLQ7fCuJpZpKJLwI?si=c7b695a3606f409d" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Evade.png" alt="Evade by Castor & Pollux">
             </a>
           </li>
-          <li id="release-fiesta" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-fiesta" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/2z3FlfHMBa53arLGp8Abyg?si=55824a1dc28a4315" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Fiesta.png" alt="Fiesta by Castor & Pollux">
             </a>
           </li>
-          <li id="release-fake_love" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-fake_love" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/1kljBvAA6437tKoOg0Vrnm?si=79dc24c8bb6949df" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/fakelove.jpg" alt="Fake Love by Castor & Pollux">
             </a>          
           </li>
-          <li id="release-predator" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+          <li id="release-predator" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/6mALdYQy1c5QNtFWLo7uXx?si=058d0671a3f84b25" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Predator.png" alt="Predator by Castor & Pollux">
             </a>
           </li>
-          <li id="release-drop_bombs" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+          <li id="release-drop_bombs" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/4g0KLJgbkrDeDAlCOfxvzM?si=ff30c86b6aaa419b" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/Drop_Bombs.jpg" alt="Drop Bombs by Castor & Pollux">
             </a>
