--- a/index.html
+++ b/index.html
@@ -368,7 +368,16 @@
             </div>
             <p class="pv3 f3-l w-50-l">Castor & Pollux @ Noir NY</p>
             <p class="pv3 f3-l w-20-l">New York, NY</p>
-            <a href="/" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">coming soon</a>
+            <a target="_blank" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">Non Ticketed</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Nov<span class="db-l tr-l ml3 ml0-l">20</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ Echostage</p>
+            <p class="pv3 f3-l w-20-l">Washington, DC</p>
+            <a href="https://www.ticketmaster.com/alan-walker-washington-district-of-columbia-11-20-2021/event/15005B2EB00D469A" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
           </li>
         </ul>
       </section>
