--- a/index.html
+++ b/index.html
@@ -197,6 +197,15 @@
         <ul class="tc tl-l">
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Dec<span class="db-l tr-l ml3 ml0-l">11</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ The DL</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://nightout.com/events/winter-wonderland-at-above-it-all-rooftop-party-saturday-december-11th/tickets?utm_campaign=joseph-romano-7&utm_source=Personal+Tracking+Link" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
               <h2 class="f2 f1-l fs-normal">Nov<span class="db-l tr-l ml3 ml0-l">20</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
