--- a/index.html
+++ b/index.html
@@ -197,6 +197,15 @@
         <ul class="tc tl-l">
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Dec<span class="db-l tr-l ml3 ml0-l">17</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ Noir NY</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://www.bandsintown.com/e/103042919-castor-and-pollux-at-noir-new-york?came_from=257&utm_medium=web&utm_source=home&utm_campaign=recommended_event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">Non Ticketed</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
               <h2 class="f2 f1-l fs-normal">Dec<span class="db-l tr-l ml3 ml0-l">11</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
