--- a/index.html
+++ b/index.html
@@ -197,6 +197,33 @@
         <ul class="tc tl-l">
           <li class="pa4 bt bb mv1 flex-l items-center">
             <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Dec<span class="db-l tr-l ml3 ml0-l">31</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">NYE To The Moon @ Top of the Box</p>
+            <p class="pv3 f3-l w-20-l">Brooklyn, NY</p>
+            <a href="https://www.eventbrite.com/e/nye-2022-to-the-moon-tickets-220030626527?aff=CP" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Dec<span class="db-l tr-l ml3 ml0-l">30</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ Nebula</p>
+            <p class="pv3 f3-l w-20-l">New York, NY</p>
+            <a href="https://posh.vip/e/gryffin-nebula?t=castorpollux" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
+              <h2 class="f2 f1-l fs-normal">Dec<span class="db-l tr-l ml3 ml0-l">28</span></h2>
+              <div class="br ml4 rotate-20 db-l dn"></div>
+            </div>
+            <p class="pv3 f3-l w-50-l">Castor & Pollux @ Echostage</p>
+            <p class="pv3 f3-l w-20-l">Washington, DC</p>
+            <a href="https://www.ticketmaster.com/event/15005B69A016238A" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+          </li>
+          <li class="pa4 bt bb mv1 flex-l items-center">
+            <div class="flex-l w-20-l">
               <h2 class="f2 f1-l fs-normal">Dec<span class="db-l tr-l ml3 ml0-l">17</span></h2>
               <div class="br ml4 rotate-20 db-l dn"></div>
             </div>
