--- a/index.html
+++ b/index.html
@@ -207,8 +207,15 @@
                 <p class="pv3 f3-l w-20-l">New York, NY</p>
                 <a href="https://www.ticketmaster.com/event/00005C31E71E270F" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
               </li>
-            </ul>
-            <ul class="tc tl-l">
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Feb<span class="db-l tr-l ml3 ml0-l">12</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ LAVO Nightclub</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://tickets.taogroup.com/e/stoon-and-friends-lavo-new-york-5/tickets?utm_source=affiliate&utm_name=pollux&utm_id=61e8a87658a44508956f675b0ad120f3" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Jan<span class="db-l tr-l ml3 ml0-l">28</span></h2>
