somewhere nowhere show

--- a/index.html
+++ b/index.html
@@ -205,6 +205,15 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Mar<span class="db-l tr-l ml3 ml0-l">04</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Somewhere Nowhere</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://www.eventbrite.com/e/castor-pollux-tickets-288291777467?aff=castorandpollux" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Feb<span class="db-l tr-l ml3 ml0-l">24</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
