--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   <link rel="stylesheet" href="css/plax-star-bgrnd.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMEXGVLQXZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-HMEXGVLQXZ');
+  </script>
 </head>
 <!-- PARALLAX STAR BACKGROUND MADE BY @SCREENSHAKE linkedin.com/in/saranshsinha -->
 <body>
