--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
           <!-- <div id="aboutGradient" class="absolute top-0 left-0"></div> -->
           <div id="bioTextContainer" class="relative flex justify-center w-100 bb bt b--gray pv3 pv4-ns ph2">
             <p id="bioText" class="f4-m f3-ns lh-copy ph3 ph2-l center">
-              Welcome to the home of your favorite Twin DJs and producers Castor & Pollux. Based in New York City, the dynamic duo have been demolishing the edm scene for the past six years, releasing big room sounds one after another. With 9 releases in 2020 alone, Castor & Pollux are ready for an even bigger 2021. 
-              <br/>The question is, are you?
+              Joe and Pete Romano, otherwise known as Castor & Pollux, are the New York City based twin production and DJ duo inspired by internationally acclaimed acts like Hardwell and Swedish House Mafia. Castor & Pollux are known for their Big Room & Trance festival music, and for their emotional and uplifting Progressive House. During their years in the underground-scene, Castor & Pollux have worked their way up to become one of the most promising upcoming acts in the scene, accumulating over 2 million total streams across all digital platforms and gaining support from top EDM-acts across the world.
+              <br/><br/>
+              Many of their original productions have been supported by W&W, Nicky Romero, Blasterjaxx and many more as well as continuing their successful path with multiple top 50 placements on Beatport's EDM/Mainstage Charts. With their release history, a lot of confidence was shown by top clubs in the US such as DJ Mag's #1 Club Echostage where they were supporting acts for Martin Garrix, Tiesto, Alan Walker and Alesso. They also performed at notorious venues in NYC such as Nebula with Gryffin and LAVO with Modern Machines as well as Eden Nightclub in Tampa, FL with Cash Cash and Mariel Underground with Dubvision in Boston, MA. Lastly, they have performed at the first ever Insomniac Events' Project Glow Festival in Washington DC alongside many headlining acts. With gaining even more momentum with bookings and a consistent release schedule, and supporting major acts, it is safe to say that the best is yet to come for Castor & Pollux.
             </p>
           </div>
         <!-- </div> -->
