--- a/index.html
+++ b/index.html
@@ -220,6 +220,33 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Jun<span class="db-l tr-l ml3 ml0-l">24</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Mercury Lounge</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://www.ticketmaster.com/event/00005CA2D63C3583" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">May<span class="db-l tr-l ml3 ml0-l">22</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ The Summer CLub: Stoon and Friends</p>
+                <p class="pv3 f3-l w-20-l">Queens, NY</p>
+                <a href="https://thesummerclub.ticketsauce.com/e/dj-stoon-friends" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">May<span class="db-l tr-l ml3 ml0-l">1</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Project Glow Afterparty w/ Martin Garrix</p>
+                <p class="pv3 f3-l w-20-l">Washington, DC</p>
+                <a href="" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Apr<span class="db-l tr-l ml3 ml0-l">30</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
