mission show and two releases

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
       <section id="releases" class="white pv6-l">
         <h2 class="dn" aria-hidden="false">releases</h2>
         <ul class="flex flex-column items-center releases-list">
+          <li id="release-here_with_you" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/track/3KjGg8UwI2U82TBFGfc1gj?si=05a9d320b37a4415" target="_blank" rel="noopener noreferrer">
+              <img src="./media/album_art/cnp_here_with_you.jpeg" alt="Here With You by Castor & Pollux">
+            </a>
+          </li>
+          <li id="release-for_you" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/track/6bXxV19ZXImSVNM1miOlsp?si=34497027c68d490e" target="_blank" rel="noopener noreferrer">
+              <img src="./media/album_art/cnp_for_you.jpeg" alt="For You by Castor & Pollux">
+            </a>
+          </li>
           <li id="release-holding_on_to_something" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/3YfkfJBlEIfRw1YLVHcHEn?si=ec0a7f2fc4fb43e8" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/cnp_holding_on_to_something.jpeg" alt="Holding on to Something by Castor & Pollux">
@@ -87,7 +97,7 @@
           </li>
           <li id="release-close_to_you" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/3ksFDgPaswlBNtAxMNSbVO?si=fcba14decac84511" target="_blank" rel="noopener noreferrer">
-              <img src="./media/album_art/cp_CloseToYou.jpeg" alt="CLose to You by Castor & Pollux">
+              <img src="./media/album_art/cp_CloseToYou.jpeg" alt="Close to You by Castor & Pollux">
             </a>
           </li>
           <li id="release-external_focus" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
@@ -230,7 +240,16 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
-                  <h3 class="f2 f1-l fs-normal">Jun<span class="db-l tr-l ml3 ml0-l">24</span></h2>
+                  <h3 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">25</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Mission Nightclub</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">24</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
                 <p class="pv3 f3-l w-50-l">Castor & Pollux @ Mercury Lounge</p>
