lots of shows added

--- a/index.html
+++ b/index.html
@@ -240,7 +240,43 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
-                  <h3 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">25</span></h2>
+                  <h3 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">3rd</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Avalon Nightclub</p>
+                <p class="pv3 f3-l w-20-l">Los Angeles, CA</p>
+                <a href="https://www.bandsintown.com/e/103658609-castor-and-pollux-at-avalon-hollywood?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">18</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Elements Music & Arts Festival</p>
+                <p class="pv3 f3-l w-20-l">Long Pond, PA</p>
+                <a href="https://www.tixr.com/groups/elementsfestival/events/elements-music-arts-festival-2022-32840" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">12</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Alchemy Nightclub</p>
+                <p class="pv3 f3-l w-20-l">Raleigh, NC</p>
+                <a href="https://www.bandsintown.com/e/103621398-castor-and-pollux-at-alchemy?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">11</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ QC Social Lounge</p>
+                <p class="pv3 f3-l w-20-l">Charlotte, NC</p>
+                <a href="https://www.bandsintown.com/e/103621392-castor-and-pollux-at-qc-social-lounge?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Jun<span class="db-l tr-l ml3 ml0-l">25</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
                 <p class="pv3 f3-l w-50-l">Castor & Pollux @ Mission Nightclub</p>
@@ -249,7 +285,7 @@
               </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
-                  <h3 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">24</span></h2>
+                  <h3 class="f2 f1-l fs-normal">Jun<span class="db-l tr-l ml3 ml0-l">24</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
                 <p class="pv3 f3-l w-50-l">Castor & Pollux @ Mercury Lounge</p>
