richmond and echostage zedd

--- a/index.html
+++ b/index.html
@@ -245,6 +245,24 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">1</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Echostage</p>
+                <p class="pv3 f3-l w-20-l">Washington, DC</p>
+                <a href="https://www.ticketmaster.com/zedd-washington-district-of-columbia-09-24-2022/event/15005D02261A79CA" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">24</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Kabana Rooftop</p>
+                <p class="pv3 f3-l w-20-l">Richmond, VA</p>
+                <a href="https://www.eventbrite.com/e/castor-and-pollux-at-kabana-rooftop-tickets-390635209427" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">23</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
