--- a/index.html
+++ b/index.html
@@ -250,21 +250,39 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
-                  <h3 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">1</span></h2>
+                  <h3 class="f2 f1-l fs-normal">Nov<span class="db-l tr-l ml3 ml0-l">4</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
-                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Echostage</p>
-                <p class="pv3 f3-l w-20-l">Washington, DC</p>
-                <a href="https://www.ticketmaster.com/zedd-washington-district-of-columbia-09-24-2022/event/15005D02261A79CA" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ NOTO Philadelphia</p>
+                <p class="pv3 f3-l w-20-l">Philadelphia, PA</p>
+                <a href="https://linkstub.com/en/cedric-gervais?ref=WaOCr" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">23</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Nexchapter Label Showcase</p>
+                <p class="pv3 f3-l w-20-l">Amsterdam, NL</p>
+                <a href="https://www.bandsintown.com/e/103818751-castor-and-pollux-at-ade-festival?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Oct<span class="db-l tr-l ml3 ml0-l">15</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ PHD Rooftop</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://www.bandsintown.com/e/103837117-castor-and-pollux-at-ph-d?came_from=700&utm_medium=web&utm_source=artist_page&utm_campaign=ticket_rsvp" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
               </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">24</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
-                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Kabana Rooftop</p>
-                <p class="pv3 f3-l w-20-l">Richmond, VA</p>
-                <a href="https://www.eventbrite.com/e/castor-and-pollux-at-kabana-rooftop-tickets-390635209427" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Echostage</p>
+                <p class="pv3 f3-l w-20-l">Washington, DC</p>
+                <a href="https://www.ticketmaster.com/zedd-washington-district-of-columbia-09-24-2022/event/15005D02261A79CA" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
               </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
