new shows end 2022

--- a/index.html
+++ b/index.html
@@ -255,6 +255,33 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Dec<span class="db-l tr-l ml3 ml0-l">31</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Electric Room NYE 2023 Stoon & Friends</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://iconmarketing.ticketsauce.com/e/new-years-eve-at-electric-room/tickets?utm_source=promoter&utm_name=cp&utm_id=638817254a3840a1b42a176d0ad1e024" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Dec<span class="db-l tr-l ml3 ml0-l">10</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Mission Nightclub</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://www.bandsintown.com/e/103953159-castor-and-pollux-at-mission-nyc?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Nov<span class="db-l tr-l ml3 ml0-l">17</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Fame Nightclub</p>
+                <p class="pv3 f3-l w-20-l">Chicago, IL</p>
+                <a href="https://www.bandsintown.com/e/103891252-castor-and-pollux-at-fame-nightclub?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Nov<span class="db-l tr-l ml3 ml0-l">5</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
