2022 close and 2023 shows

--- a/index.html
+++ b/index.html
@@ -249,8 +249,42 @@
       </section>
       <div id="shows">
         <section class="mw9 ph4 center white ttu i mv5">
-          <h2 id="shows-2022" class="f1 fs-normal mb4 pointer tc tl-l">2022</h2>
+          <h2 id="shows-2023" class="f1 fs-normal mb4 pointer tc tl-l">2023</h2>
           <div class="shows-content">
+            <div class="dn ph4 pv2 bb bw2 mv1 flex-l items-center justify-between">
+              <p class="w-20">Date</p>
+              <p class="w-50">Venue</p>
+              <p class="w-20">Location</p>
+              <p class="w-10">RSVP</p>
+            </div>
+            <ul class="tc tl-l">
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Feb<span class="db-l tr-l ml3 ml0-l">4</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Electric Hotel</p>
+                <p class="pv3 f3-l w-20-l">Chicago, IL</p>
+                <a href="https://www.eventbrite.com/e/electric-hotel-presents-castor-pollux-tickets-503714392307" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Jan<span class="db-l tr-l ml3 ml0-l">26</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Sky SLC</p>
+                <p class="pv3 f3-l w-20-l">Salt Lake City, UT</p>
+                <a href="https://tickets.skyslc.com/e/therapy-thursdays-alpha-9/tickets" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section class="mw9 ph4 center white ttu i mv5">
+          <div class="shows-toggle flex items-center pointer justify-center justify-start-l flex-column flex-row-l">
+            <h2 class="f1 fs-normal mr3-l mb1 mb0-l">2022</h2>
+            <p class="f7">(click to view)</p>
+          </div>
+          <div class="shows-content dn mt4">
             <div class="dn ph4 pv2 bb bw2 mv1 flex-l items-center justify-between">
               <p class="w-20">Date</p>
               <p class="w-50">Venue</p>
@@ -505,7 +539,7 @@
           </div>
         </section>
         <section class="mw9 ph4 center white ttu i mv5">
-          <div id="shows-2021" class="flex items-center pointer justify-center justify-start-l flex-column flex-row-l">
+          <div class="shows-toggle flex items-center pointer justify-center justify-start-l flex-column flex-row-l">
             <h2 class="f1 fs-normal mr3-l mb1 mb0-l">2021</h2>
             <p class="f7">(click to view)</p>
           </div>
