--- a/index.html
+++ b/index.html
@@ -265,6 +265,33 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Feb<span class="db-l tr-l ml3 ml0-l">25</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Lavo w/ Stoon & Friends</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://tickets.taogroup.com/e/stoon-friends-saturdays-lavo-new-york-2-25/tickets?_ga=2.13323319.1863759831.1675956795-555547426.1664305187&_gl=1*3fs2j1*_ga*NTU1NTQ3NDI2LjE2NjQzMDUxODc.*_ga_H5GC9S2W5Q*MTY3NTk1Njc5NC4yNC4xLjE2NzU5NTcyMjguMC4wLjA.*_ga_MBSQ104EF5*MTY3NTk1Njc5NC40LjEuMTY3NTk1NzIyOC4wLjAuMA" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Feb<span class="db-l tr-l ml3 ml0-l">17</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Echostage w/ Alesso</p>
+                <p class="pv3 f3-l w-20-l">Washington, DC</p>
+                <a href="https://www.ticketmaster.com/event/15005D937AFD1938" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Feb<span class="db-l tr-l ml3 ml0-l">11</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Avalon Hollywood w/ Matisse & Sadko</p>
+                <p class="pv3 f3-l w-20-l">Los Angeles, CA</p>
+                <a href="https://avalonhollywood.com/event/021123-matisse-sadko/" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Feb<span class="db-l tr-l ml3 ml0-l">4</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
