royale and elements 2023

--- a/index.html
+++ b/index.html
@@ -270,6 +270,24 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">11-13</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Elements Festival</p>
+                <p class="pv3 f3-l w-20-l">Long Pond, PA</p>
+                <a href="https://www.tixr.com/groups/elementsfestival/events/elements-music-arts-festival-2023-50574" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Apr<span class="db-l tr-l ml3 ml0-l">15</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Royale Boston</p>
+                <p class="pv3 f3-l w-20-l">Boston, MA</p>
+                <a href="https://www.eventbrite.com/e/royale-saturdays-41523-tickets-595055114867?aff=castorpollux" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Apr<span class="db-l tr-l ml3 ml0-l">1</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
