--- a/index.html
+++ b/index.html
@@ -279,6 +279,15 @@
               </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Apr<span class="db-l tr-l ml3 ml0-l">28</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Marquee</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://tickets.taogroup.com/e/benny-benassi-marquee-new-york-4-28/tickets?_ga=2.242204610.1736413564.1681736138-555547426.1664305187&_gl=1*1olhu5w*_ga*NTU1NTQ3NDI2LjE2NjQzMDUxODc.*_ga_H5GC9S2W5Q*MTY4MTczNjEzOC43LjAuMTY4MTczNjEzOC4wLjAuMA..*_ga_YM2RTYGJJX" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Apr<span class="db-l tr-l ml3 ml0-l">15</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
