added 3 summer shows 2023

--- a/index.html
+++ b/index.html
@@ -289,12 +289,30 @@
               </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">9</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Summer Club</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://posh.vip/f/439b?t=joseph-romano" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Jun<span class="db-l tr-l ml3 ml0-l">24</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Mission Nightclub</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://www.bandsintown.com/e/104507969-castor-and-pollux-at-mission-nyc?came_from=257&utm_medium=web&utm_source=artist_page&utm_campaign=event" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Jun<span class="db-l tr-l ml3 ml0-l">10</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
-                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Rose Nightclub</p>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Green Room</p>
                 <p class="pv3 f3-l w-20-l">Ft. Lauderdale, FL</p>
-                <a href="https://www.eventbrite.com/e/thomas-gold-at-rosenight-club-june10th-2023-tickets-533980137967" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+                <a href="https://dice.fm/partner/dice/event/r9b3q-thomas-gold-at-greenroom-ftl-10th-jun-greenroom-ftl-fort-lauderdale-tickets?dice_id=1198452&dice_channel=web&dice_tags=organic&dice_campaign=DICE&dice_feature=marketing&_branch_match_id=1138655536839317327&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXz8nMy9ZLyUxO1UvL1c8zMDNNskiyNDWxNAAAH3yRjyEAAAA%3D" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
               </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
