jul 21 somewhere nowhere

--- a/index.html
+++ b/index.html
@@ -294,6 +294,15 @@
               </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">21</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Somewhere Nowhere</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://bandsintown.com/e/104624038?&came_from=210&_ga=2.160498877.1605476805.1689865997-747520446.1689512967" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">9</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
