--- a/index.html
+++ b/index.html
@@ -299,6 +299,15 @@
               </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">5</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Marquee New York</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://tickets.taogroup.com/e/marquee-new-york-8-5/tickets" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Jul<span class="db-l tr-l ml3 ml0-l">29</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
