beatdown and another marquee

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
       <section id="releases" class="white pv6-l">
         <h2 class="dn" aria-hidden="false">releases</h2>
         <ul class="flex flex-column items-center releases-list">
+          <li id="release-on_the_floor" class="release-card pv5 pv0-l" data-aos="fade-left" data-aos-anchor-placement="center-bottom">
+            <a href="https://open.spotify.com/track/0wCO8Ei3hn5lYbG3m6PIOU?si=4780d416ca0b42b2" target="_blank" rel="noopener noreferrer">
+              <img src="./media/album_art/cp_beatdown.jpeg" alt="Beatdown by Castor & Pollux">
+            </a>
+          </li>
           <li id="release-on_the_floor" class="release-card pv5 pv0-l" data-aos="fade-right" data-aos-anchor-placement="center-bottom">
             <a href="https://open.spotify.com/track/4C9uiUGtAuaqwOyDBlENWf?si=43d24fbb6f8c4fd4" target="_blank" rel="noopener noreferrer">
               <img src="./media/album_art/cp-legends.jpeg" alt="Legends by Castor & Pollux">
@@ -288,6 +293,15 @@
               <p class="w-10">RSVP</p>
             </div>
             <ul class="tc tl-l">
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">25</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Marquee New York</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://tickets.taogroup.com/e/marquee-new-york-8-25/tickets" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">18</span></h2>
