--- a/index.html
+++ b/index.html
@@ -295,6 +295,15 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">9</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Mission Nightclub</p>
+                <p class="pv3 f3-l w-20-l">New York, NY</p>
+                <a href="https://www.bandsintown.com/e/104687818?&came_from=210&_ga=2.254261832.1938780779.1694266920-134321248.1690309937" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Aug<span class="db-l tr-l ml3 ml0-l">25</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
