--- a/index.html
+++ b/index.html
@@ -295,6 +295,15 @@
             <ul class="tc tl-l">
               <li class="pa4 bt bb mv1 flex-l items-center">
                 <div class="flex-l w-20-l">
+                  <h3 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">14</span></h2>
+                  <div class="br ml4 rotate-20 db-l dn"></div>
+                </div>
+                <p class="pv3 f3-l w-50-l">Castor & Pollux @ Sky SLC</p>
+                <p class="pv3 f3-l w-20-l">Salt Lake City, UT</p>
+                <a href="https://tickets.skyslc.com/e/therapy-thursdays-danny-avila/tickets" target="_blank" rel="noreferrer" class="w-10-l db ba pv3 ph2 tc mt3 mt0-l show-tickets-button">lets party</a>
+              </li>
+              <li class="pa4 bt bb mv1 flex-l items-center">
+                <div class="flex-l w-20-l">
                   <h3 class="f2 f1-l fs-normal">Sep<span class="db-l tr-l ml3 ml0-l">9</span></h2>
                   <div class="br ml4 rotate-20 db-l dn"></div>
                 </div>
